--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,8 @@
+---
+title: "Hello World"
+date: 2020-11-23
+---
+
 title: Caley Burton
 author: People Manager, Technical Writer
 email: caleyburton@gmail.com
